# IntellectSoft

./: .gitignore  README.md  pyproject.toml
customer_support_api/: config.py  db_helper.py  dependency.py  enums.py  main.py  models.py  schemas.py
customer_support_api/core/: config.py
customer_support_api/crud/: __init__.py  customers.py  operator.py  requests.py
customer_support_api/routes/: customers.py  operator.py  requests.py
customer_support_api/tests/: conftest.py  test_crud.py  test_customer_requests.py  test_customers.py
customer_support_api/tests/crud/: conftest.py  test_customer_requests.py  test_customers.py  test_requests.py
customer_support_api/v1/: crud.py  schemas.py
customer_support_api/v1/crud/: __init__.py  customer_requests.py  customers.py  operator.py
customer_support_api/v1/routes/: customer_requests.py  customers.py  operator.py
